--- a/bgx/docker/docker-compose-bgx.yaml
+++ b/bgx/docker/docker-compose-bgx.yaml
@@ -18,7 +18,7 @@ services:
 
   settings-tp:
     build:
-      context: .
+      context: ../..
       dockerfile: families/settings/Dockerfile
       args:
         - http_proxy
@@ -28,7 +28,7 @@ services:
     environment:
     - SAWTOOTH_HOME=/project/sawtooth-core/data-bgx
     volumes:
-      - ./:/project/sawtooth-core
+      - ../..:/project/sawtooth-core
     container_name: sawtooth-settings-tp-bgx
     depends_on:
       - validator
@@ -44,7 +44,7 @@ services:
 
   bgt-tp-python:
     build:
-      context: .
+      context: ../..
       dockerfile: bgx/families/bgt_python/Dockerfile
       args:
         - http_proxy
@@ -54,7 +54,7 @@ services:
     environment:
     - SAWTOOTH_HOME=/project/sawtooth-core/data-bgx
     volumes:
-      - ./:/project/sawtooth-core
+      - ../..:/project/sawtooth-core
     container_name: bgt-tp-python-bgx
     depends_on:
       - validator
@@ -70,7 +70,7 @@ services:
 
   client:
     build:
-      context: .
+      context: ../..
       dockerfile: docker/sawtooth-shell
       args:
         - http_proxy
@@ -80,7 +80,7 @@ services:
     environment:
     - SAWTOOTH_HOME=/project/sawtooth-core/data-bgx
     volumes:
-      - ./:/project/sawtooth-core
+      - ../..:/project/sawtooth-core
     container_name: sawtooth-shell-bgx
     depends_on:
       - validator
@@ -94,7 +94,7 @@ services:
 
   validator:
     build:
-      context: .
+      context: ../..
       dockerfile: validator/Dockerfile-bgx
       args:
         - http_proxy
@@ -104,7 +104,7 @@ services:
     environment:
     - SAWTOOTH_HOME=/project/sawtooth-core/data-bgx
     volumes:
-      - ./:/project/sawtooth-core
+      - ../..:/project/sawtooth-core
     container_name: sawtooth-validator-bgx
     expose:
       - 4004
@@ -141,7 +141,7 @@ services:
 
   rest-api:
     build:
-      context: .
+      context: ../..
       dockerfile: rest_api/Dockerfile
       args:
         - http_proxy
@@ -151,7 +151,7 @@ services:
     environment:
     - SAWTOOTH_HOME=/project/sawtooth-core/data-bgx
     volumes:
-      - ./:/project/sawtooth-core
+      - ../..:/project/sawtooth-core
     container_name: sawtooth-rest-api-bgx
     ports:
       - "8008:8008"
@@ -170,7 +170,7 @@ services:
 
   devmode-python:
     build:
-      context: .
+      context: ../..
       dockerfile: bgx/consensus/devmode_python/Dockerfile
       args:
         - http_proxy
@@ -180,7 +180,7 @@ services:
     environment:
     - SAWTOOTH_HOME=/project/sawtooth-core/data-bgx
     volumes:
-      - ./:/project/sawtooth-core
+      - ../..:/project/sawtooth-core
     container_name: sawtooth-devmode-python-bgx
     depends_on:
       - validator
