--- a/bgx/docker/docker-compose-net-bgx.yaml
+++ b/bgx/docker/docker-compose-net-bgx.yaml
@@ -36,7 +36,7 @@ services:
       - validator
     command: |
       bash -c "
-        bin/protogen
+        bgx/bin/protogen
         cd families/settings
         python3 setup.py clean --all
         python3 setup.py build
@@ -64,7 +64,7 @@ services:
       - validator
     command: |
       bash -c "
-        bin/protogen
+        bgx/bin/protogen
         cd bgx/families/bgt_python
         python3 setup.py clean --all
         python3 setup.py build
@@ -127,7 +127,7 @@ services:
     # cargo build --release sawadm keygen && sawtooth keygen my_key && sawset genesis -k /root/.sawtooth/keys/my_key.priv && sawadm genesis config-genesis.batch && 
     command: |
       bash -c "
-        bin/protogen
+        bgx/bin/protogen
         cd validator
         python3 setup.py clean --all
         python3 setup.py build
@@ -172,7 +172,7 @@ services:
       - validator
     command: |
       bash -c "
-        bin/protogen
+        bgx/bin/protogen
         cd rest_api
         python3 setup.py clean --all
         python3 setup.py build
@@ -200,7 +200,7 @@ services:
       - validator
     command: |
       bash -c "
-        bin/protogen
+        bgx/bin/protogen
         cd bgx/consensus/devmode_python
         python3 setup.py clean --all
         python3 setup.py build
