--- a/bgx/docker/docker-compose-net-smart-bgx.yaml
+++ b/bgx/docker/docker-compose-net-smart-bgx.yaml
@@ -28,9 +28,9 @@ services:
     networks: 
     - network1
     environment:
-    - SAWTOOTH_HOME=/project/sawtooth-core/data-bgx
+    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
     volumes:
-      - ../..:/project/sawtooth-core
+      - ../..:/project/${BGX_TOP}
     container_name: sawtooth-settings-tp-bgx
     depends_on:
       - validator
@@ -55,11 +55,11 @@ services:
         - no_proxy
     image: smart-bgt-tp-python-bgx:${ISOLATION_ID}
     environment:
-    - SAWTOOTH_HOME=/project/sawtooth-core/data-bgx
+    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
     networks:
     - network1
     volumes:
-      - ../..:/project/sawtooth-core
+      - ../..:/project/${BGX_TOP}
     container_name: smart-bgt-tp-python-bgx
     depends_on:
       - validator
@@ -69,7 +69,7 @@ services:
         cd bgx/families/smart_bgt_python
         python3 setup.py clean --all
         python3 setup.py build
-        smart-bgt-tp-python -vv -C tcp://validator:4004
+        ../../bin/smart-bgt-tp-python -vv -C tcp://validator:4004
       "
     stop_signal: SIGKILL
 
@@ -87,9 +87,9 @@ services:
     networks:
     - network1
     environment:
-    - SAWTOOTH_HOME=/project/sawtooth-core/data-bgx
+    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
     volumes:
-      - ../..:/project/sawtooth-core
+      - ../..:/project/${BGX_TOP}
     container_name: sawtooth-shell-bgx
     depends_on:
       - validator
@@ -113,9 +113,9 @@ services:
     networks:
     - network1
     environment:
-    - SAWTOOTH_HOME=/project/sawtooth-core/data-bgx
+    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
     volumes:
-      - ../..:/project/sawtooth-core
+      - ../..:/project/${BGX_TOP}
     container_name: sawtooth-validator-bgx
     expose:
       - 4004
@@ -161,9 +161,9 @@ services:
         - no_proxy
     image: sawtooth-rest-api-bgx:${ISOLATION_ID}
     environment:
-    - SAWTOOTH_HOME=/project/sawtooth-core/data-bgx
+    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
     volumes:
-      - ../..:/project/sawtooth-core
+      - ../..:/project/${BGX_TOP}
     container_name: sawtooth-rest-api-bgx
     networks:
     - network1
@@ -193,9 +193,9 @@ services:
     networks:
     - network1
     environment:
-    - SAWTOOTH_HOME=/project/sawtooth-core/data-bgx
+    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
     volumes:
-      - ../..:/project/sawtooth-core
+      - ../..:/project/${BGX_TOP}
     container_name: sawtooth-devmode-python-bgx
     depends_on:
       - validator
@@ -205,7 +205,7 @@ services:
         cd bgx/consensus/devmode_python
         python3 setup.py clean --all
         python3 setup.py build
-        devmode-python -vv --connect tcp://validator:5050 --component tcp://validator:4004
+        ../../bin/devmode-python -vv --connect tcp://validator:5050 --component tcp://validator:4004
       "
     stop_signal: SIGKILL
 
