--- a/bgx/families/bgx_validator_registry/nose2.cfg
+++ b/bgx/families/bgx_validator_registry/nose2.cfg
@@ -1,4 +1,4 @@
-# Copyright 2018 Cargill Incorporated
+# Copyright 2017 Intel Corporation
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -11,7 +11,12 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
+# ------------------------------------------------------------------------------
+[unittest]
+start-dir = tests
+code-directories = ..
+test-file-pattern = test*.py
+plugins = nose2.plugins.coverage
 
-ISOLATION_ID=latest
-INSTALL_TYPE=-local
-BGX_TOP=bgx
+[coverage]
+always-on = True
