--- a/bgx/families/smart_bgt_python/Dockerfile
+++ b/bgx/families/smart_bgt_python/Dockerfile
@@ -17,7 +17,7 @@
 # -------------=== bgt-tp-python build ===-------------
 
 FROM ubuntu:xenial
-
+ARG BGX_TOP
 RUN echo "deb http://repo.sawtooth.me/ubuntu/ci xenial universe" >> /etc/apt/sources.list \
  && (apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 8AA7AF1F1091A5FD \
  || apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 8AA7AF1F1091A5FD) \
@@ -42,9 +42,9 @@ RUN apt-get install -y -q --allow-downgrades \
 
 RUN mkdir -p /var/log/sawtooth
 
-ENV PATH=$PATH:/project/sawtooth-core/bin
+ENV PATH=$PATH:/project/$BGX_TOP/bin
 
-WORKDIR /project/sawtooth-core
+WORKDIR /project/$BGX_TOP
 
 CMD echo "\033[0;32m--- Building bgt-tp-python ---\n\033[0m" \
  && bin/protogen \
