--- a/bgx/docker/docker-compose-bgx.yaml
+++ b/bgx/docker/docker-compose-bgx.yaml
@@ -19,11 +19,12 @@ services:
   settings-tp:
     build:
       context: ../..
-      dockerfile: families/settings/Dockerfile
+      dockerfile: bgx/docker/settings/Dockerfile
       args:
         - http_proxy
         - https_proxy
         - no_proxy
+        - BGX_TOP=bgx
     image: sawtooth-settings-tp-bgx:${ISOLATION_ID}
     environment:
     - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
@@ -50,6 +51,7 @@ services:
         - http_proxy
         - https_proxy
         - no_proxy
+        - BGX_TOP=bgx
     image: bgt-tp-python-bgx:${ISOLATION_ID}
     environment:
     - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
@@ -71,11 +73,12 @@ services:
   client:
     build:
       context: ../..
-      dockerfile: docker/sawtooth-shell
+      dockerfile: bgx/docker/sawtooth-shell
       args:
         - http_proxy
         - https_proxy
         - no_proxy
+        - BGX_TOP=bgx
     image: sawtooth-shell-bgx:${ISOLATION_ID}
     environment:
     - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
@@ -95,11 +98,12 @@ services:
   validator:
     build:
       context: ../..
-      dockerfile: validator/Dockerfile-bgx
+      dockerfile: bgx/docker/validator/Dockerfile
       args:
         - http_proxy
         - https_proxy
         - no_proxy
+        - BGX_TOP=bgx
     image: sawtooth-validator-bgx:${ISOLATION_ID}
     environment:
     - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
@@ -142,11 +146,12 @@ services:
   rest-api:
     build:
       context: ../..
-      dockerfile: rest_api/Dockerfile
+      dockerfile: bgx/docker/rest_api/Dockerfile
       args:
         - http_proxy
         - https_proxy
         - no_proxy
+        - BGX_TOP=bgx
     image: sawtooth-rest-api-bgx:${ISOLATION_ID}
     environment:
     - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
@@ -176,6 +181,7 @@ services:
         - http_proxy
         - https_proxy
         - no_proxy
+        - BGX_TOP=bgx
     image: sawtooth-devmode-python-bgx:${ISOLATION_ID}
     environment:
     - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
