--- a/bgx/docker/docker-compose-net-reg-pbft.yaml
+++ b/bgx/docker/docker-compose-net-reg-pbft.yaml
@@ -19,11 +19,12 @@ services:
   settings-tp:
     build:
       context: ../..
-      dockerfile: families/settings/Dockerfile
+      dockerfile: bgx/docker/settings/Dockerfile
       args:
         - http_proxy
         - https_proxy
         - no_proxy
+        - BGX_TOP=bgx
     image: sawtooth-settings-tp-bgx:${ISOLATION_ID}
     networks: 
     - network1
@@ -52,6 +53,7 @@ services:
         - http_proxy
         - https_proxy
         - no_proxy
+        - BGX_TOP=bgx
     image: bgt-tp-python-bgx:${ISOLATION_ID}
     environment:
     - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
@@ -80,6 +82,7 @@ services:
         - http_proxy
         - https_proxy
         - no_proxy
+        - BGX_TOP=bgx
     image: bgx-validator-registry:${ISOLATION_ID}
     environment:
     - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
@@ -109,6 +112,7 @@ services:
 #        - http_proxy
 #        - https_proxy
 #        - no_proxy
+#        - BGX_TOP=bgx
 #    image: smart-bgt-tp-python-bgx:${ISOLATION_ID}
 #    environment:
 #    - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
@@ -134,11 +138,12 @@ services:
   client:
     build:
       context: ../..
-      dockerfile: docker/sawtooth-shell-bgx
+      dockerfile: bgx/docker/sawtooth-shell
       args:
         - http_proxy
         - https_proxy
         - no_proxy
+        - BGX_TOP=bgx
     image: sawtooth-shell-bgx:${ISOLATION_ID}
     networks:
     - network1
@@ -160,11 +165,12 @@ services:
   validator:
     build:
       context: ../..
-      dockerfile: validator/Dockerfile-bgx
+      dockerfile: bgx/docker/validator/Dockerfile
       args:
         - http_proxy
         - https_proxy
         - no_proxy
+        - BGX_TOP=bgx
     image: sawtooth-validator-bgx:${ISOLATION_ID}
     networks:
     - network1
@@ -210,11 +216,12 @@ services:
   rest-api:
     build:
       context: ../..
-      dockerfile: rest_api/Dockerfile
+      dockerfile: bgx/docker/rest_api/Dockerfile
       args:
         - http_proxy
         - https_proxy
         - no_proxy
+        - BGX_TOP=bgx
     image: sawtooth-rest-api-bgx:${ISOLATION_ID}
     environment:
     - SAWTOOTH_HOME=/project/${BGX_TOP}/data-bgx
@@ -240,11 +247,12 @@ services:
   pbft-python:
     build:
       context: ../..
-      dockerfile: bgx/consensus/pbft_python/Dockerfile-bgx
+      dockerfile: bgx/consensus/pbft_python/Dockerfile
       args:
         - http_proxy
         - https_proxy
         - no_proxy
+        - BGX_TOP=bgx
     image: sawtooth-pbft-python-bgx:${ISOLATION_ID}
     networks:
     - network1
