--- a/bgx/docker/validator/Dockerfile
+++ b/bgx/docker/validator/Dockerfile
@@ -1,4 +1,4 @@
-# Copyright 2018 Cargill Incorporated
+# Copyright 2018 NTRlab
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -18,6 +18,7 @@
 
 FROM ubuntu:xenial
 ARG BGX_TOP
+
 RUN echo "deb http://repo.sawtooth.me/ubuntu/ci xenial universe" >> /etc/apt/sources.list \
  && (apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 8AA7AF1F1091A5FD \
  || apt-key adv --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys 8AA7AF1F1091A5FD) \
@@ -68,9 +69,9 @@ ENV PATH=$PATH:/project/$BGX_TOP/bgx/bin:/project/$BGX_TOP/bin
 
 WORKDIR /project/$BGX_TOP
 
-CMD echo "\033[0;32m--- Building validator $BGX_TOP ---\n\033[0m" \
- && ./bin/protogen \
- && cd validator \
+CMD echo "\033[0;32m--- Building validator ---\n\033[0m" \
+ && ls -l;./bgx/bin/protogen \
+ && cd validator;ls -l \
  && if [ -d "debian" ]; then rm -rf debian; fi \
  && python3 setup.py clean --all \
  && python3 setup.py --command-packages=stdeb.command debianize \
@@ -81,4 +82,4 @@ CMD echo "\033[0;32m--- Building validator $BGX_TOP ---\n\033[0m" \
  && mkdir lib \
  && cargo build --release \
  && cp ./target/release/sawtooth-validator bin/sawtooth-validator \
- && cp ./target/release/libsawtooth_validator.so lib/libsawtooth_validator.so && echo "DONE"
+ && cp ./target/release/libsawtooth_validator.so lib/libsawtooth_validator.so && ls -l
