--- a/bgx/docker/docker-compose-net-smart-bgx.yaml
+++ b/bgx/docker/docker-compose-net-smart-bgx.yaml
@@ -141,9 +141,9 @@ services:
         if [ -d 'target' ]; \
          then echo 'Already build'; \
          else cargo build --release; \
-           cp ./target/release/sawtooth-validator bin/sawtooth-validator; \
-           cp ./target/release/libsawtooth_validator.so lib/libsawtooth_validator.so \ 
         fi
+        cp ./target/release/sawtooth-validator bin/sawtooth-validator; 
+        cp ./target/release/libsawtooth_validator.so lib/libsawtooth_validator.so
         sawadm keygen
         sawtooth keygen my_key
         sawset genesis -k /root/.sawtooth/keys/my_key.priv
