--- a/bgx/docker/docker-compose-net-reg-pbft.yaml
+++ b/bgx/docker/docker-compose-net-reg-pbft.yaml
@@ -197,8 +197,8 @@ services:
         mkdir -p bin
         mkdir -p lib
         if [ -d 'target' ]; then echo 'Already build'; else cargo build --release; fi
-        if [ -f 'bin/sawtooth-validator' ]; then echo 'Already copied'; else cp ./target/release/sawtooth-validator bin/sawtooth-validator fi
-        if [ -f 'lib/libsawtooth_validator.so' ]; then echo 'Already copied'; else cp ./target/release/libsawtooth_validator.so lib/libsawtooth_validator.so fi
+        if [ -f 'bin/sawtooth-validator' ]; then echo 'Already copied'; else cp ./target/release/sawtooth-validator bin/sawtooth-validator; fi
+        if [ -f 'lib/libsawtooth_validator.so' ]; then echo 'Already copied'; else cp ./target/release/libsawtooth_validator.so lib/libsawtooth_validator.so; fi
         sawadm keygen
         sawtooth keygen my_key
         sawset genesis -k /root/.sawtooth/keys/my_key.priv
