--- a/bgx/docker/docker-compose-net-smart-bgx.yaml
+++ b/bgx/docker/docker-compose-net-smart-bgx.yaml
@@ -142,8 +142,8 @@ services:
          then echo 'Already build'; \
          else cargo build --release; \
         fi
-        cp ./target/release/sawtooth-validator bin/sawtooth-validator; 
-        cp ./target/release/libsawtooth_validator.so lib/libsawtooth_validator.so
+        if [ -f 'bin/sawtooth-validator' ]; then echo 'Already copied'; else cp ./target/release/sawtooth-validator bin/sawtooth-validator; fi
+        if [ -f 'lib/libsawtooth_validator.so' ]; then echo 'Already copied'; else cp ./target/release/libsawtooth_validator.so lib/libsawtooth_validator.so; fi
         sawadm keygen
         sawtooth keygen my_key
         sawset genesis -k /root/.sawtooth/keys/my_key.priv
