--- a/bgx/docker/validator/Dockerfile
+++ b/bgx/docker/validator/Dockerfile
@@ -85,12 +85,8 @@ CMD echo "\033[0;32m--- Building validator ---\n\033[0m" \
  && cp ./target/release/libsawtooth_validator.so lib/libsawtooth_validator.so && echo "DONE"
 
 CMD echo "\033[0;32m--- Building validator ---\n\033[0m" \
- && ls -l;./bin/protogen \
+ && ls -l;ls -l ../../project;./bin/protogen \
  && cd validator \
- && if [ -d "debian" ]; then rm -rf debian; fi \
- && python3 setup.py clean --all \
- && python3 setup.py --command-packages=stdeb.command debianize \
- && if [ -d "packaging/ubuntu" ]; then cp -R packaging/ubuntu/* debian/; fi \
  && if [ -d "bin" ]; then rm -rf bin; fi \
  && mkdir bin \
  && if [ -d "lib" ]; then rm -rf lib; fi \
